examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__calls_with_splat@a(*()).snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Call(
                                    Call {
                                        function: Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        arguments: ArgumentList(
                                            ArgumentList {
                                                children: [
                                                    ListSplat(
                                                        ListSplat {
                                                            children: Expression(
                                                                PrimaryExpression(
                                                                    Tuple(
                                                                        Tuple {
                                                                            children: [],
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                ),
                                                            ),
                                                            [RANGE]
                                                        },
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
